Also replace in workflows and use 25 for workflows